--- a/menu.html
+++ b/menu.html
@@ -5,33 +5,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MENU</title>
-    <!--<link rel="stylesheet" href="css/style.css">-->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
+    <header>
+        <div class="header">
+            <nav class="navbar">
+                <div class="logo">
+                    <!--<p><a href="index.html">COFFEE SHOP</a></p>-->
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                </div>
+                <ul class="menu">
+                    <li><a href="index.html">HOME PAGE</a></li>
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="specials.html">SPECIALS</a></li>
+                    <li><a href="aboutus.html">ABOUT US</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!--
+    <div id="banner">
+        <img src="images/coffeeshop.jpg" alt="banner" width="1366" height="800">
+    </div>
+-->
+    <hr>
     <h1>MENU</h1>
-    <div class="menu">
-        <ul>
-            <li><a href="index.html">HOME PAGE</a></li>
-            <li><a href="menu.html">MENU</a></li>
-            <li><a href="specials.html">SPECIALS</a></li>
-            <li><a href="aboutus.html">ABOUT US</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+    <!--<div class="menu">
+                    <ul>
+                        <li><a href="index.html">HOME PAGE</a></li>
+                        <li><a href="menu.html">MENU</a></li>
+                        <li><a href="specials.html">SPECIALS</a></li>
+                        <li><a href="aboutus.html">ABOUT US</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
+                    </ul>
+                </div>-->
+    <hr>
+    <div class="hdrink">
+        <h4>Types of Hot Coffee</h4>
+        <ul id="hotc" type="square">
+            <li>Espresso</li>
+            <li>Double Espresso</li>
+            <li><em><b>Macchiato</b></em></li>
+            <li><b>Mocha</b></li>
+            <li><small>Cappuccino</small></li>
+            <li>Flat White</li>
+            <li>Cafe Latte</li>
         </ul>
     </div>
-    <hr>
-    <h4>Types of Hot Coffee</h4>
-    <ul id="hotc" type="square">
-        <li>Espresso</li>
-        <li>Double Espresso</li>
-        <li><em><b>Macchiato</b></em></li>
-        <li><b>Mocha</b></li>
-        <li><small>Cappuccino</small></li>
-        <li>Flat White</li>
-        <li>Cafe Latte</li>
-    </ul>
-
+    <div id="cdrink">
     <h4>Types of Cold Coffee</h4>
     <ol id="coldc" type="I">
         <li>Cold Brew</li>
@@ -43,6 +69,8 @@
         <li><mark>Frappe</mark></li>
         <li><em>Dalgona</em></li>
     </ol>
+
+    </div>
 
     <table width="20%" border="2" cellpadding="5" cellspacing="5">
         <thead>
@@ -77,6 +105,35 @@
 
         </tfoot>
     </table>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Menu</h4>
+                    <ul>
+                        <li><a href="index.html">Home Page</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="specials.html">Specials</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Help</h4>
+                    <ul>
+                        <li><a href="#">Help Center</a></li>
+                        <li><a href="#">Get Started</a></li>
+                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">Privacy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow Us</h4>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
