--- a/aboutus.html
+++ b/aboutus.html
@@ -5,21 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT US</title>
-    <!--<link rel="stylesheet" href="css/style.css">-->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
+    <header>
+        <div class="header">
+            <nav class="navbar">
+                <div class="logo">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                </div>
+                <ul class="menu">
+                    <li><a href="index.html">HOME PAGE</a></li>
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="specials.html">SPECIALS</a></li>
+                    <li><a href="aboutus.html">ABOUT US</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <h1>ABOUT US</h1>
-    <div class="menu">
-        <ul>
-            <li><a href="index.html">HOME PAGE</a></li>
-            <li><a href="menu.html">MENU</a></li>
-            <li><a href="specials.html">SPECIALS</a></li>
-            <li><a href="aboutus.html">ABOUT US</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-    </div>
     <hr>
     <p>
     <pre>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis interdum euismod.Morbi tincidunt eget
