--- a/contact.html
+++ b/contact.html
@@ -5,20 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT</title>
-    <!--<link rel="stylesheet" href="css/style.css">-->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <header>
+        <div class="header">
+            <nav class="navbar">
+                <div class="logo">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                </div>
+                <ul class="menu">
+                    <li><a href="index.html">HOME PAGE</a></li>
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="specials.html">SPECIALS</a></li>
+                    <li><a href="aboutus.html">ABOUT US</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <h1>CONTACT</h1>
-    <div class="menu">
-        <ul>
-            <li><a href="index.html">HOME PAGE</a></li>
-            <li><a href="menu.html">MENU</a></li>
-            <li><a href="specials.html">SPECIALS</a></li>
-            <li><a href="aboutus.html">ABOUT US</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-    </div>
     <hr>
     <h3>FORM</h3>
     <form name="form1" id="form1" method="post" action="#">
