--- a/specials.html
+++ b/specials.html
@@ -5,22 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPECIALS</title>
-    <!--<link rel="stylesheet" href="css/style.css">-->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-    <h1>SPECIALS</h1>
-    <div class="menu">
-        <ul>
-            <li><a href="index.html">HOME PAGE</a></li>
-            <li><a href="menu.html">MENU</a></li>
-            <li><a href="specials.html">SPECIALS</a></li>
-            <li><a href="aboutus.html">ABOUT US</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-    </div>
-    <hr>
+    <header>
+        <div class="header">
+            <nav class="navbar">
+                <div class="logo">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                </div>
+                <ul class="menu">
+                    <li><a href="index.html">HOME PAGE</a></li>
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="specials.html">SPECIALS</a></li>
+                    <li><a href="aboutus.html">ABOUT US</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <img src="images/coffee1.jpg" width="1366" height="800" alt="coffe-pic" title="Coffee" border="2">
     <h2><i>Coffee Preparation</i></h2>
     <p>Coffee preparation is the process of turning coffee beans into liquid coffee. While the particular steps vary
@@ -30,7 +38,8 @@
             coffee extraction must be separated from the used grounds</i>, and finally, if desired, the extracted coffee
         is combined with other elements of the desired beverage, such as sweeteners, dairy products, dairy alternatives,
         or toppings (such as shaved chocolate).</p>
-
+    <h1>SPECIALS</h1>
+    <hr>
     <a href="https://www.starbucks.com.tr/">Starbucks</a>
 
 </body>
