--- a/index.html
+++ b/index.html
@@ -9,57 +9,53 @@
 </head>
 
 <body>
+
     <header>
-        <div class="header">
-            <nav class="navbar">
-                <div class="logo">
-                    <img src="images/bttrfly.jpeg" alt="butterfly">
-                    <img src="images/bttrfly.jpeg" alt="butterfly">
-                    <img src="images/bttrfly.jpeg" alt="butterfly">
-                </div>
-                <ul class="menu">
-                    <li><a href="index.html">HOME PAGE</a></li>
-                    <li><a href="menu.html">MENU</a></li>
-                    <li><a href="specials.html">SPECIALS</a></li>
-                    <li><a href="aboutus.html">ABOUT US</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                </ul>
-            </nav>
+        <div class="logo">
+            <img src="images/bttrfly.jpeg" alt="butterfly">
         </div>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">HOME PAGE</a></li>
+                <li><a href="menu.html">MENU</a></li>
+                <li><a href="specials.html">SPECIALS</a></li>
+                <li><a href="aboutus.html">ABOUT US</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <div id="banner">
-        <img src="images/coffeeshop.jpg" alt="banner" width="1366" height="800">
+
+    <div class="img-coffee">
+        <img src="images/coffeeshop.jpg" alt="banner" width="1396.36" height="800">
     </div>
 
-
     <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h4>Menu</h4>
-                    <ul>
-                        <li><a href="index.html">Home Page</a></li>
-                        <li><a href="menu.html">Menu</a></li>
-                        <li><a href="specials.html">Specials</a></li>
-                        <li><a href="aboutus.html">About Us</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Help</h4>
-                    <ul>
-                        <li><a href="#">Help Center</a></li>
-                        <li><a href="#">Get Started</a></li>
-                        <li><a href="#">Terms</a></li>
-                        <li><a href="#">Privacy</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Follow Us</h4>
-                </div>
+        <div class="row">
+            <div class="footer-col">
+                <ul>
+                    <li><a href="index.html">Home Page</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="specials.html">Specials</a></li>
+                    <li><a href="aboutus.html">About Us</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Help</h4>
+                <ul>
+                    <li><a href="#">Help Center</a></li>
+                    <li><a href="#">Get Started</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Privacy</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Follow Us</h4>
             </div>
         </div>
+        <!-- <p>&copy; 2024 . Tüm hakları saklıdır.</p>-->
     </footer>
 </body>
 
