--- a/specials.html
+++ b/specials.html
@@ -11,23 +11,21 @@
 <body>
 
     <header>
-        <div class="header">
-            <nav class="navbar">
-                <div class="logo">
-                    <img src="images/bttrfly.jpeg" alt="butterfly">
-                    <img src="images/bttrfly.jpeg" alt="butterfly">
-                    <img src="images/bttrfly.jpeg" alt="butterfly">
-                </div>
-                <ul class="menu">
-                    <li><a href="index.html">HOME PAGE</a></li>
-                    <li><a href="menu.html">MENU</a></li>
-                    <li><a href="specials.html">SPECIALS</a></li>
-                    <li><a href="aboutus.html">ABOUT US</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                </ul>
-            </nav>
+        <div class="logo">
+            <img src="images/logo.PNG" alt="butterfly">
         </div>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">HOME PAGE</a></li>
+                <li><a href="menu.html">MENU</a></li>
+                <li><a href="specials.html">SPECIALS</a></li>
+                <li><a href="aboutus.html">ABOUT US</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
     </header>
+
 
     <img src="images/coffee1.jpg" width="1366" height="800" alt="coffe-pic" title="Coffee" border="2">
     <h2><i>Coffee Preparation</i></h2>
@@ -41,7 +39,40 @@
     <h1>SPECIALS</h1>
     <hr>
     <a href="https://www.starbucks.com.tr/">Starbucks</a>
-
+    <footer class="footer">
+        <div class="row">
+            <div class="footer-col">
+                <ul>
+                    <li><a href="index.html">Home Page</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="specials.html">Specials</a></li>
+                    <li><a href="aboutus.html">About Us</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Help</h4>
+                <ul>
+                    <li><a href="#">Help Center</a></li>
+                    <li><a href="#">Get Started</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Privacy</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Follow Us</h4>
+                <div class="icons">
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-solid fa-envelope"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+            </div>
+        </div>
+        <div class="footer-mid">
+            <p>&copy; 2024 . Tüm hakları saklıdır.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
