--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COFFEE SHOP</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
 
     <header>
         <div class="logo">
-            <img src="images/bttrfly.jpeg" alt="butterfly">
+            <img src="images/logo.PNG" alt="butterfly">
         </div>
 
         <nav>
@@ -23,12 +24,18 @@
                 <li><a href="aboutus.html">ABOUT US</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
+            <input class="search" placeholder="Search" type="text">
         </nav>
     </header>
 
 
     <div class="img-coffee">
         <img src="images/coffeeshop.jpg" alt="banner" width="1396.36" height="800">
+        <div class="overlay">
+            <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam assumenda vel architecto
+                veniam, doloremque doloribus sint consequuntur aut ratione voluptatem iure harum culpa velit, voluptate
+                quibusdam, dolore reprehenderit numquam voluptas.</div>
+        </div>
     </div>
 
     <footer class="footer">
@@ -53,9 +60,19 @@
             </div>
             <div class="footer-col">
                 <h4>Follow Us</h4>
+                <div class="icons">
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-solid fa-envelope"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+
             </div>
         </div>
-        <!-- <p>&copy; 2024 . Tüm hakları saklıdır.</p>-->
+        <div class="footer-mid">
+            <p>&copy; 2024 . Tüm hakları saklıdır.</p>
+        </div>
+
     </footer>
 </body>
 
