--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
@@ -22,6 +25,7 @@
                 <li><a href="aboutus.html">ABOUT US</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
+            <input class="search" placeholder="Search" type="text">
         </nav>
     </header>
 
