--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MENU</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
@@ -22,72 +25,48 @@
                 <li><a href="aboutus.html">ABOUT US</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
+            <input class="search" placeholder="Search" type="text">
         </nav>
     </header>
 
-    <hr>
+
     <h1>MENU</h1>
-    <hr>
-    <div class="hdrink">
+
+    <div>
         <h4>Types of Hot Coffee</h4>
-        <ul id="hotc" type="square">
+        <ul>
             <li>Espresso</li>
             <li>Double Espresso</li>
-            <li><em><b>Macchiato</b></em></li>
-            <li><b>Mocha</b></li>
-            <li><small>Cappuccino</small></li>
+            <li>Macchiato</li>
+            <li>Mocha</li>
+            <li>Cappuccino</li>
             <li>Flat White</li>
             <li>Cafe Latte</li>
         </ul>
     </div>
-    <div id="cdrink">
+    <div>
         <h4>Types of Cold Coffee</h4>
-        <ol id="coldc" type="I">
+        <ul>
             <li>Cold Brew</li>
             <li>Iced Espresso</li>
             <li>Iced Americano</li>
-            <li><i>Iced Mocha</i></li>
-            <li><small>Iced Latte</small></li>
-            <li><del>Iced Macciahto</del><ins> Iced Macchiato</ins></li>
-            <li><mark>Frappe</mark></li>
-            <li><em>Dalgona</em></li>
-        </ol>
-
+            <li>Iced Mocha</li>
+            <li>Iced Latte</li>
+            <li>Iced Macchiato</li>
+            <li>Frappe</li>
+            <li>Dalgona</li>
+        </ul>
     </div>
 
-    <table width="20%" border="2" cellpadding="5" cellspacing="5">
-        <thead>
-            <tr>
-                <th>Coffee Name</th>
-                <th>Count</th>
-            </tr>
-        </thead>
-        <tbody align="center">
-            <tr>
-                <td>Mocha</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <td>Latte</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>Americano</td>
-                <td>9</td>
-            </tr>
-            <tr>
-                <td>Espresso</td>
-                <td>12</td>
-            </tr>
-        </tbody>
-        <tfoot align="center">
-            <tr>
-                <th>Sum</th>
-                <td>37</td>
-            </tr>
-
-        </tfoot>
-    </table>
+    <div>
+        <h4>Type of Dessert</h4>
+        <ul>
+            <li>Cheesecake</li>
+            <li>Browni</li>
+            <li>Chocolate - Cherry Cake</li>
+            <li>Cookie</li>
+        </ul>
+    </div>
 
     <footer class="footer">
         <div class="row">
