--- a/specials.html
+++ b/specials.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPECIALS</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/specials.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
@@ -23,22 +26,24 @@
                 <li><a href="aboutus.html">ABOUT US</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
+            <input class="search" placeholder="Search" type="text">
         </nav>
     </header>
 
+    <img src="images/coffee1.jpg" width="1366" height="800" alt="coffe-pic" title="Coffee">
 
-    <img src="images/coffee1.jpg" width="1366" height="800" alt="coffe-pic" title="Coffee" border="2">
-    <h2><i>Coffee Preparation</i></h2>
+    <h1>SPECIALS</h1>
+    <h2>Coffee Preparation</h2>
     <p>Coffee preparation is the process of turning coffee beans into liquid coffee. While the particular steps vary
-        with the type of coffee and with the raw materials, <b>the process includes four basic steps: </b><i>raw coffee
-            beans must be roasted, the roasted coffee beans must then be ground, and the ground coffee must then be
-            mixed with hot or cold water (depending on the method of brewing) for a specific time (brewed), the liquid
-            coffee extraction must be separated from the used grounds</i>, and finally, if desired, the extracted coffee
+        with the type of coffee and with the raw materials,the process includes four basic steps:raw coffee
+        beans must be roasted, the roasted coffee beans must then be ground, and the ground coffee must then be
+        mixed with hot or cold water (depending on the method of brewing) for a specific time (brewed), the liquid
+        coffee extraction must be separated from the used grounds, and finally, if desired, the extracted coffee
         is combined with other elements of the desired beverage, such as sweeteners, dairy products, dairy alternatives,
         or toppings (such as shaved chocolate).</p>
-    <h1>SPECIALS</h1>
-    <hr>
-    <a href="https://www.starbucks.com.tr/">Starbucks</a>
+
+
+
     <footer class="footer">
         <div class="row">
             <div class="footer-col">
