--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
 
-
+    <!--
     <h1>MENU</h1>
 
     <div>
@@ -68,7 +68,31 @@
             <li>Cookie</li>
         </ul>
     </div>
+-->
 
+    <div class="container">
+        <div class="menu">
+            <div class="menu-item">
+                <img src="images/espresso.jpeg" alt="Espresso">
+                <h2>Espresso</h2>
+                <p>Küçük ama güçlü bir kahve. Yoğun aroması ile tanınır.</p>
+                <p class="price">₺20</p>
+            </div>
+            <div class="menu-item">
+                <img src="images/latte.jpeg" alt="Latte">
+                <h2>Latte</h2>
+                <p>Yumuşak ve kremsi bir kahve. Süt ve espresso karışımı.</p>
+                <p class="price">₺25</p>
+            </div>
+            <div class="menu-item">
+                <img src="images/cappucino.jpeg" alt="Cappuccino">
+                <h2>Cappuccino</h2>
+                <p>Köpüklü süt ile espresso'nun mükemmel birleşimi.</p>
+                <p class="price">₺30</p>
+            </div>
+            <!-- Daha fazla kahve seçeneği ekleyebilirsiniz -->
+        </div>
+    </div>
     <footer class="footer">
         <div class="row">
             <div class="footer-col">
