--- a/specials.html
+++ b/specials.html
@@ -43,6 +43,40 @@
         is combined with other elements of the desired beverage, such as sweeteners, dairy products, dairy alternatives,
         or toppings (such as shaved chocolate).</p>
 
+    <section>
+        <h1>Kahve Yapımı</h1>
+        <p>Lezzetli bir kahve hazırlamak için izlenmesi gereken adımlar:</p>
+    </section>
+
+    <section>
+        <h2>1. Adım: Malzemeleri Hazırlayın</h2>
+        <ul>
+            <li>Kahve</li>
+            <li>Su</li>
+            <li>Filtre Kahve Makinesi veya French Press</li>
+            <li>Kupa</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>2. Adım: Kahveyi Ölçün</h2>
+        <p>Bir fincan kahve için yaklaşık 2 yemek kaşığı kahve kullanın.</p>
+    </section>
+
+    <section>
+        <h2>3. Adım: Su Isıtın</h2>
+        <p>Su kaynayana kadar ısıtın ve birkaç saniye bekleyin ki su biraz soğusun.</p>
+    </section>
+
+    <section>
+        <h2>4. Adım: Kahveyi Demleyin</h2>
+        <p>Isıttığınız suyu kahvenin üzerine dökün ve birkaç dakika demlenmeye bırakın.</p>
+    </section>
+
+    <section>
+        <h2>5. Adım: Kahvenin Keyfini Çıkarın</h2>
+        <p>Sıcak kahvenizi bir kupa içine dökün ve keyfini çıkarın!</p>
+    </section>
 
 
     <footer class="footer">
